--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "core-js": "^2.4.1",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.6.23"
+    "zone.js": "^0.6.23",
+    "mongodb": "^2.0.43"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^2.1.0",
@@ -42,6 +43,7 @@
     "ts-node": "1.2.1",
     "tslint": "3.13.0",
     "typescript": "~2.0.3",
-    "webdriver-manager": "10.2.5"
+    "webdriver-manager": "10.2.5",
+    "mongodb": "^2.0.43"
   }
 }
