--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "0.0.0",
   "license": "MIT",
   "angular-cli": {},
+  "engines": {
+    "node": "6.9.1",
+    "npm": "3.10.8"
+  },
   "scripts": {
-    "start": "ng serve",
+    "start": "node src/server.js",
+    "postinstall": "ng build",
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
     "pree2e": "webdriver-manager update",
@@ -14,6 +19,7 @@
   "dependencies": {
     "@angular/common": "^2.1.0",
     "@angular/compiler": "^2.1.0",
+    "@angular/compiler-cli": "^2.1.0",
     "@angular/core": "^2.1.0",
     "@angular/forms": "^2.1.0",
     "@angular/http": "^2.1.0",
@@ -22,6 +28,12 @@
     "@angular/router": "^3.1.0",
     "core-js": "^2.4.1",
     "rxjs": "5.0.0-beta.12",
+    "@types/node": "^6.0.51",
+    "angular-cli": "1.0.0-beta.17",
+    "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.14.0",
+    "morgan": "^1.7.0",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23",
     "mongodb": "^2.0.43"
